# Scaling-law-research

./: .gitignore  AGENTS.md  AI-research.md  AI_Research.ipynb  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEST_COVERAGE_REPORT.md  Untitled.ipynb  markd.md  pyproject.toml  requirements.txt  text.JSONL  yaml.py
.github/workflows/: ci.yml
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _dummy_thread.data.json  _dummy_thread.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  (+216 more)
.mypy_cache/3.8/PIL/: GimpPaletteFile.data.json  GimpPaletteFile.meta.json  TiffTags.data.json  TiffTags.meta.json  _imaging.meta.json  _version.meta.json
.mypy_cache/3.8/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json  wsgi.data.json  wsgi.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.8/aiohappyeyeballs/: types.data.json  types.meta.json
.mypy_cache/3.8/aiosignal/: __init__.data.json  __init__.meta.json
.mypy_cache/3.8/asttokens/: astroid_compat.data.json  astroid_compat.meta.json
.mypy_cache/3.8/asyncio/: coroutines.data.json  coroutines.meta.json  exceptions.data.json  exceptions.meta.json
.mypy_cache/3.8/attr/: __init__.data.json  __init__.meta.json  _cmp.data.json  _cmp.meta.json  _typing_compat.data.json  _typing_compat.meta.json  _version_info.data.json  _version_info.meta.json  converters.data.json  converters.meta.json  exceptions.data.json  exceptions.meta.json  filters.data.json  filters.meta.json  setters.data.json  setters.meta.json  validators.data.json  validators.meta.json
.mypy_cache/3.8/attrs/: __init__.data.json  (+1 more)
Planning/: PROJECT_PLAN.md  Roadmap.md
Planning/phase1and2/: p1reports.md  phase1.md
configs/: ablation_optimizer.yaml  ablation_seal.yaml  ablation_tokenizer.yaml  base_config.yaml  gpt2_qlora.yaml  sample_custom.json  sample_custom_baseline.json  scaling_context.yaml  scaling_data.yaml  scaling_depth.yaml  scaling_width.yaml  seal_qlora.yaml
data/raw/: addition_test.csv  addition_train.csv
data/sample/: train.txt  val.txt
result/: evaluation_results.csv
scripts/: analyze_adaptation.py  analyze_scaling.py  download_hf_dataset.py  export_model.py  mlx_gpt2_quicktest.sh  run_qlora_sweep.py  run_sweep.py
src/: __init__.py  activations.py  data_generation.py  eval.py  eval_baseline.py  train.py  train_gpt2_hf.py
src/data/: __init__.py  datamodule.py  tokenizers.py
src/gpt2_qlora/: eval.py  train.py
src/models/: __init__.py  tiny_gpt.py
src/seal/: __init__.py  edit_lang.py  executor.py  hf_seal.py  policy.py  rest_trainer.py  reward.py  run.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_data.py  test_env.py  test_eval.py  test_export.py  test_integration.py  test_models.py  test_models_edge_cases.py  test_run_sweep.py  test_training.py  test_utils.py
tqdm/: __init__.py
venv312/: pyvenv.cfg
(+783 files in other folders)
